Add POST /inflow/cheer, allowing showtime to grant points for bits
